Initial commit of IRHydra version based on Polymer.dart
This is work in progress, only very basic functionality works and still a lot of refactoring is required.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,9 @@
 name: irhydra
 dependencies:
-  js: any
   browser: any
-  web_ui: any
+  js: any
+  polymer: any
+transformers:
+- polymer:
+    entry_points: web/index.html
+
