Initial implementation of the source view with depot markers and inline navigation.

--- a/web/demos/1.v8.hydrogen.cfg
+++ b/web/demos/1.v8.hydrogen.cfg
@@ -1,7 +1,7 @@
 begin_compilation
   name "valueOf"
   method "valueOf:0"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -62,7 +62,7 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 2 t12 Constant 0x3da12409 <JS Function ToObject (SharedFunctionInfo 0x52c1e9a1)> type:object pos:11 <|@
+      0 2 t12 Constant 0x46012409 <JS Function ToObject (SharedFunctionInfo 0x5161e9a1)> type:object pos:11 <|@
       0 1 t14 LoadNamedField t12.[in-object]@24 pos:11 <|@
       0 1 t15 LoadNamedField t14.[in-object]@20 pos:11 <|@
       0 1 t16 LoadNamedField t15.[in-object]@24 pos:11 <|@
@@ -104,7 +104,7 @@ end_cfg
 begin_compilation
   name "IsPrimitive"
   method "IsPrimitive:1"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -127,8 +127,8 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 2 t20 Constant 0x52c080b1 <true> type:boolean <|@
-      0 2 t19 Constant 0x52c080c1 <false> type:boolean <|@
+      0 2 t20 Constant 0x516080b1 <true> type:boolean <|@
+      0 2 t19 Constant 0x516080c1 <false> type:boolean <|@
       0 3 t1 Context  <|@
       0 1 t2 Parameter 0 <|@
       0 2 t3 Parameter 1 <|@
@@ -336,7 +336,7 @@ end_cfg
 begin_compilation
   name "toString"
   method "toString:2"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -397,7 +397,7 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 2 t12 Constant 0x3da14041 <JS Function FunctionSourceString (SharedFunctionInfo 0x52c26ab9)> type:object pos:11 <|@
+      0 2 t12 Constant 0x46014041 <JS Function FunctionSourceString (SharedFunctionInfo 0x51626ab9)> type:object pos:11 <|@
       0 1 t14 LoadNamedField t12.[in-object]@24 pos:11 <|@
       0 1 t15 LoadNamedField t14.[in-object]@20 pos:11 <|@
       0 1 t16 LoadNamedField t15.[in-object]@24 pos:11 <|@
@@ -439,7 +439,7 @@ end_cfg
 begin_compilation
   name "y"
   method "y:3"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -501,7 +501,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:16 <|@
-      0 0 t12 CheckMaps t2 [0x2ae0e9d1] pos:16 <|@
+      0 0 t12 CheckMaps t2 [0x52a0e9d1] pos:16 <|@
       0 1 t13 LoadNamedField t2._y[in-object]@16 type:heap-number pos:16 <|@
       0 1 d14 LoadNamedField t13.[in-object]@4 pos:16 <|@
       0 1 s15 Constant 0  range:0_0 pos:16 <|@
@@ -531,7 +531,7 @@ end_cfg
 begin_compilation
   name "Vec2.len"
   method "Vec2.len:4"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -554,7 +554,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 0 t4 Constant 0x52c08091 <undefined> <|@
+      0 0 t4 Constant 0x51608091 <undefined> <|@
       0 4 t1 Context  <|@
       0 11 t2 Parameter 0 <|@
       0 0 v5 Simulate id=2 var[1] = t1, var[0] = t2 <|@
@@ -593,10 +593,10 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 3 t10 Constant 0x3da0e3f1 <a MathConstructor with map 0x2ae0c311> type:object pos:16 <|@
+      0 3 t10 Constant 0x4600e3f1 <a MathConstructor with map 0x52a0c311> type:object pos:16 <|@
       0 0 t12 CheckHeapObject t2 type:non-primitive pos:31 <|@
-      0 0 t13 CheckMaps t2 [0x2ae0e9d1] pos:31 <|@
-      0 4 t15 Constant 0x3da08081 <FixedArray[87]> pos:1_0 <|@
+      0 0 t13 CheckMaps t2 [0x52a0e9d1] pos:31 <|@
+      0 4 t15 Constant 0x46008081 <FixedArray[87]> pos:1_0 <|@
       0 0 v16 Simulate id=20 push t10, push t2 pos:1_0 <|@
       0 0 v17 EnterInlined Vec2.len2, id=4 pos:1_0 <|@
       0 0 v22 Simulate id=10 var[1] = t15, push t2 pos:2_0 <|@
@@ -791,7 +791,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v83 BlockEntry  pos:21 <|@
-      0 0 t84 CheckMaps t10 [0x2ae0c311](omitted) type:object pos:21 <|@
+      0 0 t84 CheckMaps t10 [0x52a0c311](omitted) type:object pos:21 <|@
       0 1 d85 UnaryMathOperation sqrt d78 pos:21 <|@
       0 1 s86 Constant 0  range:0_0 pos:21 <|@
       0 1 t89 Change d85 d to t changes[NewSpacePromotion] type:heap-number pos:21 <|@
@@ -814,7 +814,7 @@ end_cfg
 begin_compilation
   name "loop"
   method "loop:5"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -838,8 +838,8 @@ begin_cfg
     begin_HIR
       0 0 v0 BlockEntry  <|@
       0 1 s148 Constant 1  range:1_1 <|@
-      0 1 t15 Constant 0x52c080b1 <true> type:boolean <|@
-      0 4 t5 Constant 0x52c08091 <undefined> <|@
+      0 1 t15 Constant 0x516080b1 <true> type:boolean <|@
+      0 4 t5 Constant 0x51608091 <undefined> <|@
       0 3 t1 Context  <|@
       0 2 t2 Parameter 0 <|@
       0 2 t3 Parameter 1 <|@
@@ -1012,9 +1012,9 @@ begin_cfg
       0 0 v42 Simulate id=26 pos:36 <|@
       0 1 s47 Constant 100000  range:100000_100000 pos:43 <|@
       0 0 t59 CheckHeapObject t32 type:non-primitive pos:62 <|@
-      0 0 t60 CheckMaps t32 [0x2ae0e9d1] pos:62 <|@
-      0 6 t62 Constant 0x3da08081 <FixedArray[87]> pos:1_0 <|@
-      0 3 t65 Constant 0x3da0e3f1 <a MathConstructor with map 0x2ae0c311> type:object pos:1_16 <|@
+      0 0 t60 CheckMaps t32 [0x52a0e9d1] pos:62 <|@
+      0 6 t62 Constant 0x46008081 <FixedArray[87]> pos:1_0 <|@
+      0 3 t65 Constant 0x4600e3f1 <a MathConstructor with map 0x52a0c311> type:object pos:1_16 <|@
       0 1 t80 LoadNamedField t32._x[in-object]@12 type:heap-number pos:3_16 <|@
       0 4 d81 LoadNamedField t80.[in-object]@4 pos:3_16 <|@
       0 3 d100 Mul d81 d81 ! pos:2_23 <|@
@@ -1022,7 +1022,7 @@ begin_cfg
       0 4 d111 LoadNamedField t110.[in-object]@4 pos:5_16 <|@
       0 2 d130 Mul d111 d111 ! pos:2_41 <|@
       0 2 d132 Add d100 d130 ! pos:2_32 <|@
-      0 0 t138 CheckMaps t65 [0x2ae0c311](omitted) type:object pos:1_21 <|@
+      0 0 t138 CheckMaps t65 [0x52a0c311](omitted) type:object pos:1_21 <|@
       0 2 d139 UnaryMathOperation sqrt d132 pos:1_21 <|@
       0 0 v43 Goto B5 pos:36 <|@
     end_HIR
@@ -1424,7 +1424,7 @@ end_cfg
 begin_compilation
   name "Vec2.len2"
   method "Vec2.len2:6"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -1447,7 +1447,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 0 t4 Constant 0x52c08091 <undefined> <|@
+      0 0 t4 Constant 0x51608091 <undefined> <|@
       0 6 t1 Context  <|@
       0 10 t2 Parameter 0 <|@
       0 0 v5 Simulate id=2 var[1] = t1, var[0] = t2 <|@
@@ -1487,7 +1487,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:20 <|@
-      0 0 t12 CheckMaps t2 [0x2ae0e9d1] pos:20 <|@
+      0 0 t12 CheckMaps t2 [0x52a0e9d1] pos:20 <|@
       0 0 v15 Simulate id=10 push t2 pos:1_0 <|@
       0 0 v16 EnterInlined x, id=4 pos:1_0 <|@
       0 1 t19 LoadNamedField t2._x[in-object]@12 type:heap-number pos:1_16 <|@
@@ -1666,7 +1666,7 @@ end_cfg
 begin_compilation
   name "x"
   method "x:7"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -1728,7 +1728,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:16 <|@
-      0 0 t12 CheckMaps t2 [0x2ae0e9d1] pos:16 <|@
+      0 0 t12 CheckMaps t2 [0x52a0e9d1] pos:16 <|@
       0 1 t13 LoadNamedField t2._x[in-object]@12 type:heap-number pos:16 <|@
       0 1 d14 LoadNamedField t13.[in-object]@4 pos:16 <|@
       0 1 s15 Constant 0  range:0_0 pos:16 <|@
@@ -1758,7 +1758,7 @@ end_cfg
 begin_compilation
   name "sqrt"
   method "sqrt:8"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -1822,7 +1822,7 @@ begin_cfg
       0 0 v8 BlockEntry  <|@
       0 0 v9 Simulate id=3 <|@
       0 0 v10 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 0 v12 TypeofIsAndBranch t3 == 0x20a0fab9 <String[6]: number> goto (B4, B2) pos:43 <|@
+      0 0 v12 TypeofIsAndBranch t3 == 0x3ab0fab9 <String[6]: number> goto (B4, B2) pos:43 <|@
     end_HIR
     begin_LIR
       20 label () () () ()  [hir:v8] <|@
@@ -1883,7 +1883,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v19 BlockEntry  pos:58 <|@
-      0 2 t21 Constant 0x3da12295 <JS Function NonNumberToNumber (SharedFunctionInfo 0x52c1e7d9)> type:object pos:58 <|@
+      0 2 t21 Constant 0x46012295 <JS Function NonNumberToNumber (SharedFunctionInfo 0x5161e7d9)> type:object pos:58 <|@
       0 1 t23 LoadNamedField t21.[in-object]@24 pos:58 <|@
       0 1 t24 LoadNamedField t23.[in-object]@20 pos:58 <|@
       0 1 t25 LoadNamedField t24.[in-object]@24 pos:58 <|@
@@ -2026,7 +2026,7 @@ end_cfg
 begin_compilation
   name "y"
   method "y:9"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2088,7 +2088,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:16 <|@
-      0 0 t12 CheckMaps t2 [0x2ae0e9d1,0x2ae0e9f9] pos:16 <|@
+      0 0 t12 CheckMaps t2 [0x52a0e9d1,0x52a0e9f9] pos:16 <|@
       0 1 t13 LoadNamedField t2._y[in-object]@16 type:heap-number pos:16 <|@
       0 1 d14 LoadNamedField t13.[in-object]@4 pos:16 <|@
       0 1 s15 Constant 0  range:0_0 pos:16 <|@
@@ -2118,7 +2118,7 @@ end_cfg
 begin_compilation
   name "Vec2.len"
   method "Vec2.len:10"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2179,13 +2179,13 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 3 t10 Constant 0x3da0e3f1 <a MathConstructor with map 0x2ae0c311> type:object pos:16 <|@
-      0 1 t12 Constant 0x20a1e73d <String[4]: len2> type:string pos:31 <|@
-      0 1 t13 Constant 0x45a263a1 <Code> pos:31 <|@
+      0 3 t10 Constant 0x4600e3f1 <a MathConstructor with map 0x52a0c311> type:object pos:16 <|@
+      0 1 t12 Constant 0x3ab1e73d <String[4]: len2> type:string pos:31 <|@
+      0 1 t13 Constant 0x2ae263a1 <Code> pos:31 <|@
       0 0 t14 PushArgument t2 pos:31 <|@
       0 2 t15 CallWithDescriptor t13 t1 t12 #1 changes[*] pos:31 <|@
       0 0 v16 Simulate id=18 push t10, push t15 pos:31 <|@
-      0 0 t17 CheckMaps t10 [0x2ae0c311](omitted) type:object pos:21 <|@
+      0 0 t17 CheckMaps t10 [0x52a0c311](omitted) type:object pos:21 <|@
       0 1 d22 Change t15 t to d allow-undefined-as-nan pos:21 <|@
       0 1 d18 UnaryMathOperation sqrt d22 pos:21 <|@
       0 1 s19 Constant 0  range:0_0 pos:21 <|@
@@ -2221,7 +2221,7 @@ end_cfg
 begin_compilation
   name "Vec2.len2"
   method "Vec2.len2:11"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2244,7 +2244,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 0 t4 Constant 0x52c08091 <undefined> <|@
+      0 0 t4 Constant 0x51608091 <undefined> <|@
       0 6 t1 Context  <|@
       0 10 t2 Parameter 0 <|@
       0 0 v5 Simulate id=2 var[1] = t1, var[0] = t2 <|@
@@ -2284,7 +2284,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:20 <|@
-      0 0 t12 CheckMaps t2 [0x2ae0e9d1,0x2ae0e9f9] pos:20 <|@
+      0 0 t12 CheckMaps t2 [0x52a0e9d1,0x52a0e9f9] pos:20 <|@
       0 0 v15 Simulate id=10 push t2 pos:1_0 <|@
       0 0 v16 EnterInlined x, id=4 pos:1_0 <|@
       0 1 t19 LoadNamedField t2._x[in-object]@12 type:heap-number pos:1_16 <|@
@@ -2463,7 +2463,7 @@ end_cfg
 begin_compilation
   name "loop"
   method "loop:12"
-  date 1390655712000
+  date 1390659455000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2487,8 +2487,8 @@ begin_cfg
     begin_HIR
       0 0 v0 BlockEntry  <|@
       0 1 s68 Constant 1  range:1_1 <|@
-      0 1 t15 Constant 0x52c080b1 <true> type:boolean <|@
-      0 4 t5 Constant 0x52c08091 <undefined> <|@
+      0 1 t15 Constant 0x516080b1 <true> type:boolean <|@
+      0 4 t5 Constant 0x51608091 <undefined> <|@
       0 3 t1 Context  <|@
       0 2 t2 Parameter 0 <|@
       0 2 t3 Parameter 1 <|@
@@ -2660,8 +2660,8 @@ begin_cfg
       0 0 v41 BlockEntry  pos:36 <|@
       0 0 v42 Simulate id=26 pos:36 <|@
       0 1 s47 Constant 100000  range:100000_100000 pos:43 <|@
-      0 1 t59 Constant 0x20a1e74d <String[3]: len> type:string pos:62 <|@
-      0 1 t60 Constant 0x45a263a1 <Code> pos:62 <|@
+      0 1 t59 Constant 0x3ab1e74d <String[3]: len> type:string pos:62 <|@
+      0 1 t60 Constant 0x2ae263a1 <Code> pos:62 <|@
       0 0 v43 Goto B5 pos:36 <|@
     end_HIR
     begin_LIR
