Make deopt button work on the source view as well.

--- a/web/demos/v8/deopt-eager/hydrogen.cfg
+++ b/web/demos/v8/deopt-eager/hydrogen.cfg
@@ -1,7 +1,7 @@
 begin_compilation
   name "valueOf"
   method "valueOf:0"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -62,7 +62,7 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 2 t12 Constant 0x32512409 <JS Function ToObject (SharedFunctionInfo 0x4501e9a1)> type:object pos:11 <|@
+      0 2 t12 Constant 0x39012409 <JS Function ToObject (SharedFunctionInfo 0x5c51e9a1)> type:object pos:11 <|@
       0 1 t14 LoadNamedField t12.[in-object]@24 pos:11 <|@
       0 1 t15 LoadNamedField t14.[in-object]@20 pos:11 <|@
       0 1 t16 LoadNamedField t15.[in-object]@24 pos:11 <|@
@@ -104,7 +104,7 @@ end_cfg
 begin_compilation
   name "IsPrimitive"
   method "IsPrimitive:1"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -127,8 +127,8 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 2 t20 Constant 0x450080b1 <true> type:boolean <|@
-      0 2 t19 Constant 0x450080c1 <false> type:boolean <|@
+      0 2 t20 Constant 0x5c5080b1 <true> type:boolean <|@
+      0 2 t19 Constant 0x5c5080c1 <false> type:boolean <|@
       0 3 t1 Context  <|@
       0 1 t2 Parameter 0 <|@
       0 2 t3 Parameter 1 <|@
@@ -336,7 +336,7 @@ end_cfg
 begin_compilation
   name "toString"
   method "toString:2"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -397,7 +397,7 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 2 t12 Constant 0x32514041 <JS Function FunctionSourceString (SharedFunctionInfo 0x45026ab9)> type:object pos:11 <|@
+      0 2 t12 Constant 0x39014041 <JS Function FunctionSourceString (SharedFunctionInfo 0x5c526ab9)> type:object pos:11 <|@
       0 1 t14 LoadNamedField t12.[in-object]@24 pos:11 <|@
       0 1 t15 LoadNamedField t14.[in-object]@20 pos:11 <|@
       0 1 t16 LoadNamedField t15.[in-object]@24 pos:11 <|@
@@ -439,7 +439,7 @@ end_cfg
 begin_compilation
   name "y"
   method "y:3"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -501,7 +501,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:16 <|@
-      0 0 t12 CheckMaps t2 [0x3930e9d1] pos:16 <|@
+      0 0 t12 CheckMaps t2 [0x2360e9d1] pos:16 <|@
       0 1 t13 LoadNamedField t2._y[in-object]@16 type:heap-number pos:16 <|@
       0 1 d14 LoadNamedField t13.[in-object]@4 pos:16 <|@
       0 1 s15 Constant 0  range:0_0 pos:16 <|@
@@ -531,7 +531,7 @@ end_cfg
 begin_compilation
   name "len"
   method "len:4"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -554,7 +554,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 0 t5 Constant 0x45008091 <undefined> <|@
+      0 0 t5 Constant 0x5c508091 <undefined> <|@
       0 3 t1 Context  <|@
       0 1 t2 Parameter 0 <|@
       0 12 t3 Parameter 1 <|@
@@ -596,12 +596,12 @@ begin_cfg
       0 0 v8 BlockEntry  <|@
       0 0 v9 Simulate id=3 <|@
       0 0 v10 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 0 t12 CheckHeapObject t3 type:non-primitive pos:17 <|@
-      0 0 t13 CheckMaps t3 [0x3930e9d1] pos:17 <|@
-      0 6 t15 Constant 0x32508081 <FixedArray[87]> pos:1_0 <|@
+      0 0 t12 CheckHeapObject t3 type:non-primitive pos:247 <|@
+      0 0 t13 CheckMaps t3 [0x2360e9d1] pos:247 <|@
+      0 6 t15 Constant 0x39008081 <FixedArray[87]> pos:1_0 <|@
       0 0 v16 Simulate id=13 push t3 pos:1_0 <|@
       0 0 v17 EnterInlined Vec2.len, id=4 pos:1_0 <|@
-      0 3 t18 Constant 0x3250e3f1 <a MathConstructor with map 0x3930c311> type:object pos:1_16 <|@
+      0 3 t18 Constant 0x3900e3f1 <a MathConstructor with map 0x2360c311> type:object pos:1_16 <|@
       0 0 v23 Simulate id=20 var[1] = t15, push t18, push t3 pos:2_0 <|@
       0 0 v24 EnterInlined Vec2.len2, id=4 pos:2_0 <|@
       0 0 v29 Simulate id=10 var[1] = t15, push t3 pos:3_0 <|@
@@ -796,7 +796,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v90 BlockEntry  pos:1_21 <|@
-      0 0 t91 CheckMaps t18 [0x3930c311](omitted) type:object pos:1_21 <|@
+      0 0 t91 CheckMaps t18 [0x2360c311](omitted) type:object pos:1_21 <|@
       0 2 d92 UnaryMathOperation sqrt d85 pos:1_21 <|@
       0 0 v93 LeaveInlined  pos:1_21 <|@
       0 0 v94 Simulate id=11 push d92 pos:1_21 <|@
@@ -832,10 +832,10 @@ begin_cfg
       end_locals
     end_states
     begin_HIR
-      0 0 v96 BlockEntry  pos:17 <|@
-      0 1 s97 Constant 1  range:1_1 pos:17 <|@
-      0 1 t100 Change d92 d to t changes[NewSpacePromotion] type:heap-number pos:17 <|@
-      0 0 v98 Return t100 (pop s97 values) pos:17 <|@
+      0 0 v96 BlockEntry  pos:247 <|@
+      0 1 s97 Constant 1  range:1_1 pos:247 <|@
+      0 1 t100 Change d92 d to t changes[NewSpacePromotion] type:heap-number pos:247 <|@
+      0 0 v98 Return t100 (pop s97 values) pos:247 <|@
     end_HIR
     begin_LIR
       116 label () () () ()  [hir:v96] <|@
@@ -850,7 +850,7 @@ end_cfg
 begin_compilation
   name "loop"
   method "loop:5"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -874,8 +874,8 @@ begin_cfg
     begin_HIR
       0 0 v0 BlockEntry  <|@
       0 1 s161 Constant 1  range:1_1 <|@
-      0 1 t15 Constant 0x450080b1 <true> type:boolean <|@
-      0 4 t5 Constant 0x45008091 <undefined> <|@
+      0 1 t15 Constant 0x5c5080b1 <true> type:boolean <|@
+      0 4 t5 Constant 0x5c508091 <undefined> <|@
       0 3 t1 Context  <|@
       0 2 t2 Parameter 0 <|@
       0 2 t3 Parameter 1 <|@
@@ -1047,14 +1047,14 @@ begin_cfg
       0 0 v41 BlockEntry  pos:36 <|@
       0 0 v42 Simulate id=26 pos:36 <|@
       0 1 s47 Constant 100000  range:100000_100000 pos:43 <|@
-      0 1 t60 Constant 0x32518ca5 <JS Function len (SharedFunctionInfo 0x3251891d)> type:object pos:60 <|@
+      0 1 t60 Constant 0x39018ca5 <JS Function len (SharedFunctionInfo 0x3901891d)> type:object pos:60 <|@
       0 1 t62 LoadNamedField t60.[in-object]@24 pos:60 <|@
       0 1 t63 LoadNamedField t62.[in-object]@20 pos:60 <|@
       0 1 t64 LoadNamedField t63.[in-object]@24 pos:60 <|@
-      0 7 t65 Constant 0x32508081 <FixedArray[87]> pos:1_0 <|@
-      0 0 t68 CheckHeapObject t32 type:non-primitive pos:1_17 <|@
-      0 0 t69 CheckMaps t32 [0x3930e9d1] pos:1_17 <|@
-      0 3 t74 Constant 0x3250e3f1 <a MathConstructor with map 0x3930c311> type:object pos:2_16 <|@
+      0 7 t65 Constant 0x39008081 <FixedArray[87]> pos:1_0 <|@
+      0 0 t68 CheckHeapObject t32 type:non-primitive pos:1_247 <|@
+      0 0 t69 CheckMaps t32 [0x2360e9d1] pos:1_247 <|@
+      0 3 t74 Constant 0x3900e3f1 <a MathConstructor with map 0x2360c311> type:object pos:2_16 <|@
       0 1 t89 LoadNamedField t32._x[in-object]@12 type:heap-number pos:4_16 <|@
       0 4 d90 LoadNamedField t89.[in-object]@4 pos:4_16 <|@
       0 3 d109 Mul d90 d90 ! pos:3_23 <|@
@@ -1062,7 +1062,7 @@ begin_cfg
       0 4 d120 LoadNamedField t119.[in-object]@4 pos:6_16 <|@
       0 2 d139 Mul d120 d120 ! pos:3_41 <|@
       0 2 d141 Add d109 d139 ! pos:3_32 <|@
-      0 0 t147 CheckMaps t74 [0x3930c311](omitted) type:object pos:2_21 <|@
+      0 0 t147 CheckMaps t74 [0x2360c311](omitted) type:object pos:2_21 <|@
       0 3 d148 UnaryMathOperation sqrt d141 pos:2_21 <|@
       0 0 v43 Goto B5 pos:36 <|@
     end_HIR
@@ -1389,10 +1389,10 @@ begin_cfg
       end_locals
     end_states
     begin_HIR
-      0 0 v152 BlockEntry  pos:1_17 <|@
-      0 0 v153 LeaveInlined  pos:1_17 <|@
-      0 0 v154 Simulate id=49 push d148 pos:1_17 <|@
-      0 0 v155 Goto B14 pos:1_17 <|@
+      0 0 v152 BlockEntry  pos:1_247 <|@
+      0 0 v153 LeaveInlined  pos:1_247 <|@
+      0 0 v154 Simulate id=49 push d148 pos:1_247 <|@
+      0 0 v155 Goto B14 pos:1_247 <|@
     end_HIR
     begin_LIR
       224 label () () () ()  Dead block replaced with B14 [hir:v152] <|@
@@ -1505,7 +1505,7 @@ end_cfg
 begin_compilation
   name "Vec2.len"
   method "Vec2.len:6"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -1528,7 +1528,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 0 t4 Constant 0x45008091 <undefined> <|@
+      0 0 t4 Constant 0x5c508091 <undefined> <|@
       0 4 t1 Context  <|@
       0 11 t2 Parameter 0 <|@
       0 0 v5 Simulate id=2 var[1] = t1, var[0] = t2 <|@
@@ -1567,10 +1567,10 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 3 t10 Constant 0x3250e3f1 <a MathConstructor with map 0x3930c311> type:object pos:16 <|@
+      0 3 t10 Constant 0x3900e3f1 <a MathConstructor with map 0x2360c311> type:object pos:16 <|@
       0 0 t12 CheckHeapObject t2 type:non-primitive pos:31 <|@
-      0 0 t13 CheckMaps t2 [0x3930e9d1] pos:31 <|@
-      0 4 t15 Constant 0x32508081 <FixedArray[87]> pos:1_0 <|@
+      0 0 t13 CheckMaps t2 [0x2360e9d1] pos:31 <|@
+      0 4 t15 Constant 0x39008081 <FixedArray[87]> pos:1_0 <|@
       0 0 v16 Simulate id=20 push t10, push t2 pos:1_0 <|@
       0 0 v17 EnterInlined Vec2.len2, id=4 pos:1_0 <|@
       0 0 v22 Simulate id=10 var[1] = t15, push t2 pos:2_0 <|@
@@ -1765,7 +1765,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v83 BlockEntry  pos:21 <|@
-      0 0 t84 CheckMaps t10 [0x3930c311](omitted) type:object pos:21 <|@
+      0 0 t84 CheckMaps t10 [0x2360c311](omitted) type:object pos:21 <|@
       0 1 d85 UnaryMathOperation sqrt d78 pos:21 <|@
       0 1 s86 Constant 0  range:0_0 pos:21 <|@
       0 1 t89 Change d85 d to t changes[NewSpacePromotion] type:heap-number pos:21 <|@
@@ -1788,7 +1788,7 @@ end_cfg
 begin_compilation
   name "Vec2.len2"
   method "Vec2.len2:7"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -1811,7 +1811,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 0 t4 Constant 0x45008091 <undefined> <|@
+      0 0 t4 Constant 0x5c508091 <undefined> <|@
       0 6 t1 Context  <|@
       0 10 t2 Parameter 0 <|@
       0 0 v5 Simulate id=2 var[1] = t1, var[0] = t2 <|@
@@ -1851,7 +1851,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:20 <|@
-      0 0 t12 CheckMaps t2 [0x3930e9d1] pos:20 <|@
+      0 0 t12 CheckMaps t2 [0x2360e9d1] pos:20 <|@
       0 0 v15 Simulate id=10 push t2 pos:1_0 <|@
       0 0 v16 EnterInlined x, id=4 pos:1_0 <|@
       0 1 t19 LoadNamedField t2._x[in-object]@12 type:heap-number pos:1_16 <|@
@@ -2030,7 +2030,7 @@ end_cfg
 begin_compilation
   name "x"
   method "x:8"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2092,7 +2092,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:16 <|@
-      0 0 t12 CheckMaps t2 [0x3930e9d1] pos:16 <|@
+      0 0 t12 CheckMaps t2 [0x2360e9d1] pos:16 <|@
       0 1 t13 LoadNamedField t2._x[in-object]@12 type:heap-number pos:16 <|@
       0 1 d14 LoadNamedField t13.[in-object]@4 pos:16 <|@
       0 1 s15 Constant 0  range:0_0 pos:16 <|@
@@ -2122,7 +2122,7 @@ end_cfg
 begin_compilation
   name "sqrt"
   method "sqrt:9"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2186,7 +2186,7 @@ begin_cfg
       0 0 v8 BlockEntry  <|@
       0 0 v9 Simulate id=3 <|@
       0 0 v10 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 0 v12 TypeofIsAndBranch t3 == 0x5df0fab9 <String[6]: number> goto (B4, B2) pos:43 <|@
+      0 0 v12 TypeofIsAndBranch t3 == 0x53c0fab9 <String[6]: number> goto (B4, B2) pos:43 <|@
     end_HIR
     begin_LIR
       20 label () () () ()  [hir:v8] <|@
@@ -2247,7 +2247,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v19 BlockEntry  pos:58 <|@
-      0 2 t21 Constant 0x32512295 <JS Function NonNumberToNumber (SharedFunctionInfo 0x4501e7d9)> type:object pos:58 <|@
+      0 2 t21 Constant 0x39012295 <JS Function NonNumberToNumber (SharedFunctionInfo 0x5c51e7d9)> type:object pos:58 <|@
       0 1 t23 LoadNamedField t21.[in-object]@24 pos:58 <|@
       0 1 t24 LoadNamedField t23.[in-object]@20 pos:58 <|@
       0 1 t25 LoadNamedField t24.[in-object]@24 pos:58 <|@
@@ -2390,7 +2390,7 @@ end_cfg
 begin_compilation
   name "y"
   method "y:10"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2452,7 +2452,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:16 <|@
-      0 0 t12 CheckMaps t2 [0x3930e9d1,0x3930e9f9] pos:16 <|@
+      0 0 t12 CheckMaps t2 [0x2360e9d1,0x2360e9f9] pos:16 <|@
       0 1 t13 LoadNamedField t2._y[in-object]@16 type:heap-number pos:16 <|@
       0 1 d14 LoadNamedField t13.[in-object]@4 pos:16 <|@
       0 1 s15 Constant 0  range:0_0 pos:16 <|@
@@ -2482,7 +2482,7 @@ end_cfg
 begin_compilation
   name "len"
   method "len:11"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2546,13 +2546,13 @@ begin_cfg
       0 0 v8 BlockEntry  <|@
       0 0 v9 Simulate id=3 <|@
       0 0 v10 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 1 t12 Constant 0x5df1e74d <String[3]: len> type:string pos:17 <|@
-      0 1 t13 Constant 0x352263a1 <Code> pos:17 <|@
-      0 0 t14 PushArgument t3 pos:17 <|@
-      0 2 t15 CallWithDescriptor t13 t1 t12 #1 changes[*] pos:17 <|@
-      0 0 v16 Simulate id=11 push t15 pos:17 <|@
-      0 1 s17 Constant 1  range:1_1 pos:17 <|@
-      0 0 v18 Return t15 (pop s17 values) pos:17 <|@
+      0 1 t12 Constant 0x53c1e74d <String[3]: len> type:string pos:247 <|@
+      0 1 t13 Constant 0x42a263a1 <Code> pos:247 <|@
+      0 0 t14 PushArgument t3 pos:247 <|@
+      0 2 t15 CallWithDescriptor t13 t1 t12 #1 changes[*] pos:247 <|@
+      0 0 v16 Simulate id=11 push t15 pos:247 <|@
+      0 1 s17 Constant 1  range:1_1 pos:247 <|@
+      0 0 v18 Return t15 (pop s17 values) pos:247 <|@
     end_HIR
     begin_LIR
       20 label () () () ()  [hir:v8] <|@
@@ -2575,7 +2575,7 @@ end_cfg
 begin_compilation
   name "Vec2.len"
   method "Vec2.len:12"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2636,13 +2636,13 @@ begin_cfg
       0 0 v7 BlockEntry  <|@
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
-      0 3 t10 Constant 0x3250e3f1 <a MathConstructor with map 0x3930c311> type:object pos:16 <|@
-      0 1 t12 Constant 0x5df1e73d <String[4]: len2> type:string pos:31 <|@
-      0 1 t13 Constant 0x352263a1 <Code> pos:31 <|@
+      0 3 t10 Constant 0x3900e3f1 <a MathConstructor with map 0x2360c311> type:object pos:16 <|@
+      0 1 t12 Constant 0x53c1e73d <String[4]: len2> type:string pos:31 <|@
+      0 1 t13 Constant 0x42a263a1 <Code> pos:31 <|@
       0 0 t14 PushArgument t2 pos:31 <|@
       0 2 t15 CallWithDescriptor t13 t1 t12 #1 changes[*] pos:31 <|@
       0 0 v16 Simulate id=18 push t10, push t15 pos:31 <|@
-      0 0 t17 CheckMaps t10 [0x3930c311](omitted) type:object pos:21 <|@
+      0 0 t17 CheckMaps t10 [0x2360c311](omitted) type:object pos:21 <|@
       0 1 d22 Change t15 t to d allow-undefined-as-nan pos:21 <|@
       0 1 d18 UnaryMathOperation sqrt d22 pos:21 <|@
       0 1 s19 Constant 0  range:0_0 pos:21 <|@
@@ -2678,7 +2678,7 @@ end_cfg
 begin_compilation
   name "Vec2.len2"
   method "Vec2.len2:13"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2701,7 +2701,7 @@ begin_cfg
     end_states
     begin_HIR
       0 0 v0 BlockEntry  <|@
-      0 0 t4 Constant 0x45008091 <undefined> <|@
+      0 0 t4 Constant 0x5c508091 <undefined> <|@
       0 6 t1 Context  <|@
       0 10 t2 Parameter 0 <|@
       0 0 v5 Simulate id=2 var[1] = t1, var[0] = t2 <|@
@@ -2741,7 +2741,7 @@ begin_cfg
       0 0 v8 Simulate id=3 <|@
       0 0 v9 StackCheck t1 changes[NewSpacePromotion] <|@
       0 0 t11 CheckHeapObject t2 type:non-primitive pos:20 <|@
-      0 0 t12 CheckMaps t2 [0x3930e9d1,0x3930e9f9] pos:20 <|@
+      0 0 t12 CheckMaps t2 [0x2360e9d1,0x2360e9f9] pos:20 <|@
       0 0 v15 Simulate id=10 push t2 pos:1_0 <|@
       0 0 v16 EnterInlined x, id=4 pos:1_0 <|@
       0 1 t19 LoadNamedField t2._x[in-object]@12 type:heap-number pos:1_16 <|@
@@ -2920,7 +2920,7 @@ end_cfg
 begin_compilation
   name "loop"
   method "loop:14"
-  date 1390749421000
+  date 1390756075000
 end_compilation
 begin_cfg
   name "Z_Code generation"
@@ -2944,8 +2944,8 @@ begin_cfg
     begin_HIR
       0 0 v0 BlockEntry  <|@
       0 1 s81 Constant 1  range:1_1 <|@
-      0 1 t15 Constant 0x450080b1 <true> type:boolean <|@
-      0 4 t5 Constant 0x45008091 <undefined> <|@
+      0 1 t15 Constant 0x5c5080b1 <true> type:boolean <|@
+      0 4 t5 Constant 0x5c508091 <undefined> <|@
       0 3 t1 Context  <|@
       0 2 t2 Parameter 0 <|@
       0 2 t3 Parameter 1 <|@
@@ -3117,10 +3117,10 @@ begin_cfg
       0 0 v41 BlockEntry  pos:36 <|@
       0 0 v42 Simulate id=26 pos:36 <|@
       0 1 s47 Constant 100000  range:100000_100000 pos:43 <|@
-      0 1 t60 Constant 0x32518ca5 <JS Function len (SharedFunctionInfo 0x3251891d)> type:object pos:60 <|@
-      0 2 t65 Constant 0x32508081 <FixedArray[87]> pos:1_0 <|@
-      0 1 t68 Constant 0x5df1e74d <String[3]: len> type:string pos:1_17 <|@
-      0 1 t69 Constant 0x352263a1 <Code> pos:1_17 <|@
+      0 1 t60 Constant 0x39018ca5 <JS Function len (SharedFunctionInfo 0x3901891d)> type:object pos:60 <|@
+      0 2 t65 Constant 0x39008081 <FixedArray[87]> pos:1_0 <|@
+      0 1 t68 Constant 0x53c1e74d <String[3]: len> type:string pos:1_247 <|@
+      0 1 t69 Constant 0x42a263a1 <Code> pos:1_247 <|@
       0 0 v43 Goto B5 pos:36 <|@
     end_HIR
     begin_LIR
@@ -3218,12 +3218,12 @@ begin_cfg
       0 1 t64 LoadNamedField t63.[in-object]@24 pos:60 <|@
       0 0 v66 Simulate id=51 var[3] = t5, push d39, push t64, push t32 pos:1_0 <|@
       0 0 v67 EnterInlined len, id=4 pos:1_0 <|@
-      0 0 t70 PushArgument t32 pos:1_17 <|@
-      0 3 t71 CallWithDescriptor t69 t65 t68 #1 changes[*] pos:1_17 <|@
-      0 0 v72 Simulate id=11 var[2] = t65, push t71 pos:1_17 <|@
-      0 0 v73 LeaveInlined  pos:1_17 <|@
-      0 0 v74 Simulate id=49 push t71 pos:1_17 <|@
-      0 0 v75 Goto B8 pos:1_17 <|@
+      0 0 t70 PushArgument t32 pos:1_247 <|@
+      0 3 t71 CallWithDescriptor t69 t65 t68 #1 changes[*] pos:1_247 <|@
+      0 0 v72 Simulate id=11 var[2] = t65, push t71 pos:1_247 <|@
+      0 0 v73 LeaveInlined  pos:1_247 <|@
+      0 0 v74 Simulate id=49 push t71 pos:1_247 <|@
+      0 0 v75 Goto B8 pos:1_247 <|@
     end_HIR
     begin_LIR
       112 label () () () ()  [hir:v55] <|@
