Roll forward to the newest polymer build
Fix styling issues

TODO: ensure that it works in non-shadow-com browsers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: irhydra
 dependencies:
   browser: any
   js: any
-  polymer: 0.10.0-pre.10
+  polymer: any
 transformers:
 - polymer:
     entry_points: web/index.html
