--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,9 @@ name: irhydra
 dependencies:
   browser: any
   js: any
-  polymer: any
+  polymer: '>=0.12.0-dev'
+  sass: 0.3.1
 transformers:
+- sass
 - polymer:
     entry_points: web/index.html
-
