Add support for .tar.bz2 demos and add WebRebels 2014 demos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ dependencies:
   sass: 0.3.1
   collection: any
   fixnum: any
+  archive: any
+  paper_elements: any
 transformers:
 - sass
 - polymer:
