--- a/irhydra/pubspec.yaml
+++ b/irhydra/pubspec.yaml
@@ -4,10 +4,9 @@ dependencies:
   browser: any
   collection: any
   fixnum: any
-  js: 0.2.2
   paper_elements: any
-  polymer: '>=0.12.0-dev'
-  sass: 0.3.1
+  polymer: any
+  sass: any
 transformers:
 - sass
 - polymer:
