--- a/irhydra/pubspec.yaml
+++ b/irhydra/pubspec.yaml
@@ -7,6 +7,8 @@ dependencies:
   paper_elements: any
   polymer: any
   sass: any
+  bootstrap:
+    path: ../bootstrap
 transformers:
 - sass
 - polymer:
