Force dart2js to generate better code by trusting type annotations.

--- a/irhydra/pubspec.yaml
+++ b/irhydra/pubspec.yaml
@@ -15,3 +15,7 @@ transformers:
 - sass
 - polymer:
     entry_points: web/index.html
+- $dart2js:
+    checked: false
+    minify: true
+    commandLineOptions: ['--trust-type-annotations', '--trust-primitives']
